grammar.js
    chunk: ($) =>
      seq(
        optional($.hash_bang_line),
        repeat($.statement),
        optional($.return_statement)
      ),

    assignment_statement: ($) =>
      seq(
        alias($._variable_assignment_varlist, $.variable_list),
        field('operator', '='),
        alias($._variable_assignment_explist, $.expression_list)
      ),
    // CfxLua: varlist op= explist  (GRIT_POWER_COMPOUND)
    augmented_assignment_statement: ($) =>
      seq(
        alias($._variable_assignment_varlist, $.variable_list),
        field('operator', $.augmented_assignment_operator),
        alias($._variable_assignment_explist, $.expression_list)
      ),
    augmented_assignment_operator: (_) =>
      choice('+=', '-=', '*=', '/=', '^=', '&=', '|=', '<<=', '>>='),
    // varlist ::= var {',' var}
    _variable_assignment_varlist: ($) =>
      list_seq(field('name', $.variable), ','),
    // explist ::= exp {',' exp}
    _variable_assignment_explist: ($) =>
      list_seq(field('value', $.expression), ','),

    // label ::= '::' Name '::'
    _name_list: ($) => name_list($),

    // function funcname funcbody
    // local function Name funcbody
    // local attnamelist ['=' explist]
    variable_declaration: ($) =>
      seq(
        'local',
        choice(
          alias($._att_name_list, $.variable_list),
          alias($._variable_assignment, $.assignment_statement)
        )
      ),
    // attnamelist '=' explist
    _variable_assignment: ($) =>
      seq(
        alias($._att_name_list, $.variable_list),
        field('operator', '='),
        alias($._variable_assignment_explist, $.expression_list)
      ),

    // attnamelist ::= [attrib] Name [attrib] {',' Name [attrib]}
    _att_name_list: ($) =>
      seq(
        optional(field('attribute', alias($._attrib, $.attribute))),
        list_seq(
          seq(
            field('name', $.identifier),
            optional(field('attribute', alias($._attrib, $.attribute)))
          ),
          ','
        ),
      ),
    // attrib ::= '<' Name '>'
    local_unpack_declaration: ($) =>
      seq(
        'local',
        alias($._name_list, $.variable_list),
        'in',
        alias($._expression_list, $.expression_list)
      ),

    // explist ::= exp {',' exp}
    _expression_list: ($) => list_seq($.expression, ','),

    /*
      exp ::=  nil | false | true | Numeral | LiteralString | '...' | functiondef |
               prefixexp | tableconstructor | exp binop exp | unop exp
     */
    number: (_) => {
      function number_literal(digits, exponent_marker, exponent_digits) {
        return choice(
          seq(digits, /U?LL/i),
          seq(
            choice(
              seq(optional(digits), optional('.'), digits),
              seq(digits, optional('.'), optional(digits))
            ),
            optional(
              seq(
                choice(
                  exponent_marker.toLowerCase(),
                  exponent_marker.toUpperCase()
                ),
                seq(optional(choice('-', '+')), exponent_digits)
              )
            ),
            optional(choice('i', 'I'))
          )
        );
      }

      const decimal_digits = /[0-9]+/;
      const decimal_literal = number_literal(
        decimal_digits,
        'e',
        decimal_digits
      );

      const hex_digits = /[a-fA-F0-9]+/;
      const hex_literal = seq(
        choice('0x', '0X'),
        number_literal(hex_digits, 'p', decimal_digits)
      );

      const bin_digits = /[01]+/;
      const bin_literal = seq(
        choice('0b', '0B'),
        choice(
          seq(bin_digits, /U?LL/i),
          seq(bin_digits, optional(choice('i', 'I')))
        )
      );

      return token(choice(decimal_literal, hex_literal, bin_literal));
    },

    // LiteralString
    hash_literal: ($) =>
      seq(
        field('start', '`'),
        field('content', optional($.hash_content)),
        field('end', '`')
      ),

    hash_content: (_) =>
      token.immediate(repeat1(choice(/[^`\\]+/, /\\./))),

    function_definition: ($) => seq('function', $._function_body),
    // funcbody ::= '(' [parlist] ')' block end
    _function_body: ($) =>
      seq(
        field('parameters', $.parameters),
        field('body', optional_block($)),
        'end'
      ),
    // '(' [parlist] ')'
    parameters: ($) => seq('(', optional($._parameter_list), ')'),
    // parlist ::= namelist [',' varargparam] | varargparam
    _parameter_list: ($) =>
      choice(
        seq(name_list($), optional(seq(',', $._vararg_parameter))),
        $._vararg_parameter
      ),
    // varargparam ::= '...' [Name]
    _prefix_expression: ($) =>
      prec(1, choice($.variable, $.function_call, $.parenthesized_expression)),

    // var ::=  Name | prefixexp [ exp ] | prefixexp . Name | prefixexp ?[ exp ] | prefixexp ?. Name
    safe_bracket_index_expression: ($) =>
      seq(
        field('table', $._prefix_expression),
        '?[',
        field('field', $.expression),
        ']'
      ),
    // CfxLua: prefixexp ?. Name
    safe_dot_index_expression: ($) =>
      seq(
        field('table', $._prefix_expression),
        '?.',
        field('field', $.identifier)
      ),

    // functioncall ::=  prefixexp args | prefixexp ':' Name args
    function_call: ($) =>
      seq(
        field('name', choice($._prefix_expression, $.method_index_expression)),
        field('arguments', $.arguments)
      ),
    // prefixexp ':' Name
    arguments: ($) =>
      choice(
        seq('(', optional(list_seq($.expression, ',')), ')'),
        $.table_constructor,
        $.string
      ),

    // '(' exp ')'
    table_constructor: ($) => seq('{', optional($._field_list), '}'),
    // fieldlist ::= field {fieldsep field} [fieldsep]
    _field_list: ($) => list_seq($.field, $._field_sep, true),
    // fieldsep ::= ',' | ';'
    field: ($) =>
      choice(
        seq(
          '[',
          field('name', $.expression),
          ']',
          field('operator', '='),
          field('value', $.expression)
        ),
        seq(field('name', $.identifier), '=', field('value', $.expression)),
        // CfxLua: { .field } => field = true, { .field = expr } => field = expr (GRIT_POWER_TABINIT)
        seq(
          '.',
          field('name', $.identifier),
          optional(seq('=', field('value', $.expression)))
        ),
        field('value', $.expression)
      ),

    // exp binop exp
    identifier: (_) => {
      // CfxLua: exclude `?` (safe navigation) and backtick (joaat hash) so the
      // lexer does not greedily absorb them into identifiers.
      const identifier_start =
        /[^\p{Control}\s+\-*/%^#&~|<>=(){}\[\];:,.\\'"`?\d]/;
      const identifier_continue =
        /[^\p{Control}\s+\-*/%^#&~|<>=(){}\[\];:,.\\'"`?]*/;
      return token(seq(identifier_start, identifier_continue));
    },

    // comment
    comment: ($) =>
      choice(
        seq(
          field('start', '--'),
          field('content', alias(/[^\r\n]*/, $.comment_content))
        ),
        seq(
          field('start', alias($._block_comment_start, '[[')),
          field('content', alias($._block_comment_content, $.comment_content)),
          field('end', alias($._block_comment_end, ']]'))
        ),
        // CfxLua: C-style /* */ block comment
        seq(
          field('start', alias($._c_block_comment_start, '/*')),
          field('content', alias($._c_block_comment_content, $.comment_content)),
          field('end', alias($._c_block_comment_end, '*/'))
        )
      ),
  },
});
